<resources>
    <string name="app_name">Conference_management_app_layout_manager_event_listener</string>
    <string name="name">Name :  </string>
    <string name="enter_your_name">Enter your name..</string>
    <string name="enter_password">Enter password...</string>
    <string name="password">Password :</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="op">Name:\t</string>
    <string name="oppass">\nPassword:\t</string>
    <string name="success">\nData Successfully Submitted for Conference Management</string>
    <string name="error">Error Please enter all values</string>
</resources>